frontend/test/should_pass/inh_attrib_001.grg
using inh_attrib_model_001;

rule r {
    t:Type4;
	modify {
        eval {
            t.a = 1;
        }
	}
}

