frontend/test/should_fail/alternative_007.grg
test alttest
{
    alternative
    {
        alt1
        {
            modify {
                eval {
                    x.a = 8;     // x is are undeclared
                }
            }
        }
        alt2
        {
            x:Node;
        }
    }
}
